--- a/includes/before-head-end.html
+++ b/includes/before-head-end.html
@@ -25,5 +25,9 @@
     * Components
     */
     --source-name-color: var(--base0C);
+
+    --font-size-L: 4rem;
+    --font-size-m: 3rem;
+    --font-size-s: 2rem;
   }
 </style>
